--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
         "leva": "^0.9.35",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.5.0",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
         "stats.js": "^0.17.0",
-        "three": "0.153.0"
+        "styled-components": "^6.1.18",
+        "three": "0.153.0",
+        "uuid": "^11.1.0",
+        "zustand": "^5.0.4"
     },
     "devDependencies": {
         "@types/react": "^18.0.27",
