--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.5.0",
+        "simple-peer": "^9.11.1",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
         "stats.js": "^0.17.0",
